--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,42 @@
 .App {
   text-align: center;
+  position: relative;
+  margin: 0 auto;
+  background-color: #00bdaa;
+  height: 90vh;
+  width: 500px;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  font-family: "Mulish", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.App-title {
+  background-color: #400082;
+  padding-top: 10px;
+  padding-bottom: 40px;
+  text-align: left;
+  padding-left: 10px;
   color: white;
+  letter-spacing: 2px;
+  margin-bottom: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-add-todo-btn {
+  background-color: #fe346e;
+  color: white;
+  border-radius: 50%;
+  padding: 20px;
+  width: 100px;
+  height: 100px;
+  font-size: 3rem;
+  border: none;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+}
+
+.App-add-todo-btn:hover {
+  background-color: #f85d89;
 }
 
 @keyframes App-logo-spin {
